Fixes header spacing, improves footer spacing

--- a/src/index.css
+++ b/src/index.css
@@ -162,7 +162,7 @@ h3 {
   right:0;
 }
 
-.navigation {
+.footerNav {
   margin-top: 100px;
 }
 
